second version of html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <h1 style="background-color:rgb(255, 99, 71);"><b>SMU</b></h1>
 <h2> My name is Mohammed and i concluded that:
      - Devops is the best!</h2>
+#<img src="pic_smu.jpg" alt="SMU" width"200" height="233">
+<h1 style="background-color:rgb(255, 99, 71);"><b>SMU</b></h1>
+
+
 
 </body>
 </html>
